src/css/style.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Open Sans', sans-serif;
}

body {
    display: flex;
    flex-direction: row;
    column-gap: 2rem;
    margin: 40px;
}

aside {
    width: 30%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    padding: 5px;
}

img {
    border-radius: 10rem;
    height: 15rem;
    width: 15rem;
    object-fit: cover;
    border: rgb(121, 121, 121) 2px solid;

}

.nome-titulo {
    font-size: 2rem;
    margin: 20px 0 10px 0;
    text-align: center;
}

.descricao-titulo {
    width: 18rem;
    text-align: center;
    margin: 0;
}

.lista-links{
    padding-top: 10px;
    display: flex;
    row-gap: 1rem;
    font-style: italic;
    flex-direction: column;
    list-style: none ;
}

a {
    text-decoration: none;
}

main{
    padding: 2rem 0 ;
    width: 70%;
    display: flex;
    align-items: center;    
    flex-direction: column;
    background: #d19d62;
    border: rgb(121, 121, 121) 2px solid;
    border-radius: 10px;
}

h1{
    padding-bottom: 40px;
}

.container {
    width: 95%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    border-radius: 10px;
    background-color: #fff;


}


.section1 {
    width: 100%;
    padding: 0 40px 40px 40px;

}
.div-h2{
    display: flex;
    justify-content: center;
    width: 100%;
    padding-bottom: 50px;
    flex-direction: row;
    justify-content: space-evenly;
}


.btn-add{
    border: none;
    background-color:#00a308;
    color: #fff;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 30px;
    height: 30px;
}

.section2 {
    width: 100%;
    padding: 0 40px 40px 40px;
    border-left: rgb(121, 121, 121) 2px solid;
    
}

.section-lista {
    list-style-type: decimal;
    margin: 0;
    padding: 0; 

}

.li-lista{
    padding: 10px 0;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    column-gap: 5px;

}
.p-lista{
    width: 90%;
}
.btn-remove{
    border: none;
    background-color:#c20202;
    color: #fff;
    border-radius: 5px;
    width: 30px;
    height: 30px;
}

.lista-links{
    width: 120px;
    padding-top: 20px;
}

.lista-links > li {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    border-radius: 5px;
    color: #fff;
}

.lista-links > li > a{
    color: #fff;
    width: fit-content;
    padding: 5px;
    
}

.link1{
    background: #06357a;
}

.link2{
    background: #85022e;
    display: flex;
    flex-direction: row;

}

.link3{
    background: #067a1f;

}

.link4{
    background: #0a16b1;

}

@media (max-width: 1080px) {

    .container {
        display: flex;
        flex-direction: column;
    }

    .section1, .section2 {
        width:85%;
        display: flex;
        flex-direction: column;
    }

    .section2{
        border: none;
    }

    /* body {
        display: flex;
        flex-direction: column;
        row-gap: 2rem;
        margin: 40px;
    } */
}

@media (max-width: 860px) {

    body {
        display: flex;
        flex-direction: column;
        row-gap: 2rem;
    }

    main, aside {
        width:100%;
    }

    .section1, .section2 {
        width:85%;
    }

   
}

@media (max-width: 450px) {

    h1{
        padding-left: 10px;
        padding-bottom: 40px;
    }

    .section1, .section2 {
        width:65%;
    }
}

